--- a/widget.html
+++ b/widget.html
@@ -23,7 +23,8 @@
   }
 
   #cash_results {
-
+    background-color: #111;
+    color: #fff;
   }
 
   #bio_results {
@@ -61,10 +62,7 @@ hr {
             <input id="i_1" type="number" min="0" max="1000" class="" name="f1" req="true" value=100
              />
              <label class="ml-2" for="f1">MW, Size of Windfarm</label>
-
-      </div>
-
-        
+          </div>
           <div class="form-inline mt-1"> 
             <input id="i_2" min="0" max="1000" class="" type="number" name="f2" value=2.8 />
             <label class="ml-2" for="f2">MW Size of the generator </label>
@@ -89,7 +87,6 @@ hr {
             <input  id="i_7" min="0" max="1000" class="" type="number" name="f7" value=80 />
             <label class="ml-2" for="f7">k Cost to remove foundation after 30 years</label>
           </div>
-          
         </form>
       </div>
     </div>
@@ -98,7 +95,7 @@ hr {
     </div>
   </div>
   <div class="row mt-5">
-    <div class="col-12 col-sm-6 offset-sm-1">
+    <div class="col-12 col-sm-5 offset-sm-1">
       <div class="text-center text-bold">
         <h2>Savings:</h2>
         <h2>Concrete and CO2</h2>
@@ -107,20 +104,28 @@ hr {
         <div><span id="a_1"></span> Total Concrete used w RUTE</div>
         <div><span id="a_2"></span> Total Concrete used w conventional poured in the ground</div>
         <hr class="m-2">
-        <div><span id="a_3"></span> Cubic yards of concrete saved</div>
-        <div><span id="a_4"></span> million pounds of concrete saved</div>
-        <div><span id="a_5"></span> million pounds of CO2 (cleaner) due to concrete saved</div>
+        <div class="font1">
+          <div><span id="a_3"></span> Cubic yards of concrete saved</div>
+          <div><span id="a_4"></span> million pounds of concrete saved</div>
+          <div><span id="a_5"></span> million pounds of CO2 (cleaner) due to concrete saved</div>
+        </div>
       </div>
     </div>
-    <div class="col-sm-3">
-      <div class="card" id="cash_results">
+    <div class="col-sm-5">
+            <div class="text-center text-bold">
+        <h2>Savings: In Dollars</h2>
+      </div>
+      <div class="card p-2 font2" id="cash_results">
         <div><span id="b_1"></span> $m, Approximate total capital expense (capex)</div>
         <div><span id="b_2"></span> $m, Foundation expense (~ 5% capex)</div>
         <div><span id="b_3"></span> $m, Bridge loan interest savings due to (faster)</div>
         <div><span id="b_4"></span> $m, Present value of second lifecyle in 30 years (stronger)</div>
         <div><span id="b_5"></span> $m, Present value decommission savings 30 years (cleaner)</div>
-        <div><span id="b_6"></span> $m, Savings</div>
-        <div><span id="b_7"></span>% ROI, savings / foundation capex</div>
+        <hr class="m-2">
+        <div class="font1">
+          <div><span id="b_6"></span> $m, Savings</div>
+          <div><span id="b_7"></span>% ROI, savings / foundation capex</div>
+        </div>
       </div>
     </div>
   </div>
