--- a/widget.html
+++ b/widget.html
@@ -41,12 +41,11 @@
     font-size: medium;
   }
 
-hr {
-
-  border: 0;
-  border-top: 2px solid rgb(122,208,27);
-  width: 97%;
-}
+  .green_line {
+    border: 0;
+    border-top: 2px solid rgb(122,208,27);
+    width: 97%;
+  }
 
 
 
@@ -56,7 +55,7 @@ hr {
 <div class="container m-2">
   <div class="row">
     <div class="col-12 col-sm-6 offset-sm-1">
-      <div class="card font2 shadow-sm p-2" id="form-card" >
+      <div class="card font2 shadow-lg p-2" id="form-card" >
         <form id="widget-form" class>
           <div class="form-inline mt-1"> 
             <input id="i_1" type="number" min="0" max="1000" class="" name="f1" req="true" value=100
@@ -91,7 +90,7 @@ hr {
       </div>
     </div>
     <div class="col-sm-3" style="margin-top:10%">
-      <button class="btn btn-lg btn-calculate" id="calculate" type="button">Calculate</button>
+      <button class="btn btn-lg btn-calculate shadow-lg " id="calculate" type="button">Calculate</button>
     </div>
   </div>
   <div class="row mt-5">
@@ -100,10 +99,10 @@ hr {
         <h2>Savings:</h2>
         <h2>Concrete and CO2</h2>
       </div>
-      <div class="card font2 p-2" id="bio_results">
+      <div class="card shadow-lg font2 p-2" id="bio_results">
         <div><span id="a_1"></span> Total Concrete used w RUTE</div>
         <div><span id="a_2"></span> Total Concrete used w conventional poured in the ground</div>
-        <hr class="m-2">
+        <hr class="m-2 green_line">
         <div class="font1">
           <div><span id="a_3"></span> Cubic yards of concrete saved</div>
           <div><span id="a_4"></span> million pounds of concrete saved</div>
@@ -112,16 +111,16 @@ hr {
       </div>
     </div>
     <div class="col-sm-5">
-            <div class="text-center text-bold">
+      <div class="text-center text-bold">
         <h2>Savings: In Dollars</h2>
       </div>
-      <div class="card p-2 font2" id="cash_results">
+      <div class="card p-2 font2 shadow-lg" id="cash_results">
         <div><span id="b_1"></span> $m, Approximate total capital expense (capex)</div>
         <div><span id="b_2"></span> $m, Foundation expense (~ 5% capex)</div>
         <div><span id="b_3"></span> $m, Bridge loan interest savings due to (faster)</div>
         <div><span id="b_4"></span> $m, Present value of second lifecyle in 30 years (stronger)</div>
         <div><span id="b_5"></span> $m, Present value decommission savings 30 years (cleaner)</div>
-        <hr class="m-2">
+        <hr class="m-2 green_line">
         <div class="font1">
           <div><span id="b_6"></span> $m, Savings</div>
           <div><span id="b_7"></span>% ROI, savings / foundation capex</div>
