--- a/widget.html
+++ b/widget.html
@@ -23,6 +23,7 @@
   }
 
   #cash_results {
+
     background-color: #111;
     color: #fff;
   }
@@ -46,11 +47,7 @@
     border-top: 2px solid rgb(122,208,27);
     width: 97%;
   }
-
-
-
 </style>
-
 
 <div class="container m-2">
   <div class="row">
@@ -58,32 +55,32 @@
       <div class="card font2 shadow-lg p-2" id="form-card" >
         <form id="widget-form" class>
           <div class="form-inline mt-1"> 
-            <input id="i_1" type="number" min="0" max="1000" class="" name="f1" req="true" value=100
+            <input id="i_1" type="number" min="0" max="1000" class="text-right" name="f1" req="true" value=100
              />
              <label class="ml-2" for="f1">MW, Size of Windfarm</label>
           </div>
           <div class="form-inline mt-1"> 
-            <input id="i_2" min="0" max="1000" class="" type="number" name="f2" value=2.8 />
+            <input id="i_2" min="0" max="1000" class="text-right" type="number" name="f2" value=2.8 />
             <label class="ml-2" for="f2">MW Size of the generator </label>
           </div>
           <div class="form-inline mt-1">
-            <input  id="i_3" min="0" max="1000" class="" type="number" name="f3" value=160 />
+            <input  id="i_3" min="0" max="1000" class="text-right" type="number" name="f3" value=160 />
             <label class="ml-2" for="f3">Cubic yards of concrete per MW (typical case)</label>
           </div>
           <div class="form-inline mt-1">
-            <input  id="i_4" min="0" max="1000" class="" type="number" name="f4" value=6 />
+            <input  id="i_4" min="0" max="1000" class="text-right" type="number" name="f4" value=6 />
             <label class="ml-2" for="f4">% Interest rate on debt</label>
           </div>
           <div class="form-inline mt-1">
-            <input  id="i_5" min="0" max="1000" class="" type="number" name="f5" value=8 />
+            <input  id="i_5" min="0" max="1000" class="text-right" type="number" name="f5" value=8 />
             <label class="ml-2" for="f5">Months, Construction period</label>
           </div>
           <div class="form-inline mt-1">
-            <input  id="i_6" min="0" max="1000" class="" type="number" name="f6" value=1 />
+            <input  id="i_6" min="0" max="1000" class="text-right" type="number" name="f6" value=1 />
             <label class="ml-2" for="f6">Month, speed to achieve commercial operation (faster)</label>
           </div>
           <div class="form-inline mt-1">
-            <input  id="i_7" min="0" max="1000" class="" type="number" name="f7" value=80 />
+            <input  id="i_7" min="0" max="1000" class="text-right" type="number" name="f7" value=80 />
             <label class="ml-2" for="f7">k Cost to remove foundation after 30 years</label>
           </div>
         </form>
@@ -100,36 +97,73 @@
         <h2>Concrete and CO2</h2>
       </div>
       <div class="card shadow-lg font2 p-2" id="bio_results">
-        <div><span id="a_1"></span> Total Concrete used w RUTE</div>
-        <div><span id="a_2"></span> Total Concrete used w conventional poured in the ground</div>
+        <div class="row">
+          <div class="col-2 d-flex flex-nowrap"><span id="a_1"></span></div>
+          <div class="col-10"> Total Concrete used w RUTE</div>
+        </div>
+        <div class="row">
+          <div class="col-2 d-flex flex-nowrap"><span id="a_2"></span></div>
+          <div class="col-10"> Total Concrete used w conventional poured in the ground</div>
+        </div>
         <hr class="m-2 green_line">
         <div class="font1">
-          <div><span id="a_3"></span> Cubic yards of concrete saved</div>
-          <div><span id="a_4"></span> million pounds of concrete saved</div>
-          <div><span id="a_5"></span> million pounds of CO2 (cleaner) due to concrete saved</div>
+          <div class="row">
+            <div class="col-2 d-flex flex-nowrap"><span id="a_3"></span></div>
+            <div class="col-10"> Cubic yards of concrete saved</div>
+          </div>
+          <div class="row">
+            <div class="col-2 d-flex flex-nowrap"><span id="a_4"></span></div>
+            <div class="col-10"> million pounds of concrete saved</div>
+          </div>
+          <div class="row">
+            <div class="col-2 d-flex flex-nowrap"><span id="a_5"></span></div>
+            <div class="col-10"> million pounds of CO2 (cleaner) due to concrete saved</div>
+          </div>
         </div>
       </div>
     </div>
     <div class="col-sm-5">
-      <div class="text-center text-bold">
-        <h2>Savings: In Dollars</h2>
-      </div>
-      <div class="card p-2 font2 shadow-lg" id="cash_results">
-        <div><span id="b_1"></span> $m, Approximate total capital expense (capex)</div>
-        <div><span id="b_2"></span> $m, Foundation expense (~ 5% capex)</div>
-        <div><span id="b_3"></span> $m, Bridge loan interest savings due to (faster)</div>
-        <div><span id="b_4"></span> $m, Present value of second lifecyle in 30 years (stronger)</div>
-        <div><span id="b_5"></span> $m, Present value decommission savings 30 years (cleaner)</div>
-        <hr class="m-2 green_line">
-        <div class="font1">
-          <div><span id="b_6"></span> $m, Savings</div>
-          <div><span id="b_7"></span>% ROI, savings / foundation capex</div>
+      <div style="max-width: 300px;">
+        <div class="text-center text-bold">
+          <h2>Savings: In Dollars</h2>
+        </div>
+        <div class="card px-1 font2 shadow-lg" id="cash_results">
+          <div class="row">
+            <div class="col-3 d-flex flex-nowrap">$<span id="b_1"></span>m</div>
+            <div class="col-9"> Approximate total capital expense (capex)</div>
+          </div>
+          <div class="row">
+            <div class="col-3 d-flex flex-nowrap">$<span id="b_2"></span>m</div>
+            <div class="col-9"> Foundation expense (~ 5% capex)</div>
+          </div>
+          <div class="row">
+            <div class="col-3 d-flex flex-nowrap">$<span id="b_3"></span>m</div>
+            <div class="col-9"> Bridge loan interest savings due to (faster)</div>
+          </div>
+          <div class="row">
+            <div class="col-3 d-flex flex-nowrap">$<span id="b_4"></span>m</div>
+            <div class="col-9"> Present value of second lifecyle in 30 years (stronger)</div>
+          </div>
+          <div class="row">
+            <div class="col-3 d-flex flex-nowrap">$<span id="b_5"></span>m</div>
+            <div class="col-9"> Present value decommission savings 30 years (cleaner)</div>
+          </div>
+          <hr class="m-2 green_line">
+          <div class="font1">
+            <div class="row">
+              <div class="col-3 d-flex flex-nowrap">$<span id="b_6"></span>m</div>
+              <div class="col-9"> Savings</div>
+            </div>
+            <div class="row">
+              <div class="col-3 d-flex flex-nowrap"><span id="b_7"></span>%</div>
+              <div class="col-9"> ROI, savings / foundation capex</div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
@@ -143,10 +177,10 @@
     var a1 = Math.ceil($('#i_1').val()/$('#i_2').val() * cubic_yards);
     var a2 = $('#i_1').val() * $('#i_3').val();
 
-    $('#a_1').html(a1)
-    $('#a_2').html(a2)
-    $('#a_3').html(a2 - a1 )
-    $('#a_4').html(((a2 - a1) * lbs_concrete/1000000).toFixed(2))
+    $('#a_1').html(a1.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,'))
+    $('#a_2').html(a2.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,'))
+    $('#a_3').html((a2 - a1).toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,') )
+    $('#a_4').html( ((a2 - a1) * lbs_concrete/1000000).toFixed(2) )
     $('#a_5').html(((a2 - a1) * co2_yard/100000).toFixed(2))
 
     var b1 = $('#i_1').val() * per_mw;
@@ -158,7 +192,7 @@
     $('#b_3').html(b4)
     $('#b_4').html(b5)
     $('#b_5').html(b6);
-    $('#b_6').html(parseFloat(b4) + parseFloat(b5) + parseFloat(b6))
+    $('#b_6').html((parseFloat(b4) + parseFloat(b5) + parseFloat(b6)).toFixed(2))
     $('#b_7').html(((parseFloat(b4) + parseFloat(b5) + parseFloat(b6))/(b1 * 0.05)).toFixed(2) * 100)
 
   }
